# BetterPaste

./: .gitignore  CREDITS.md  Cargo.toml  README.md  build.rs  userscript.js
src/: main.rs  userscript.js
